Hide "Bigger images" button on small screens, Fix image width of sidebar on small screens

--- a/less/figure.less
+++ b/less/figure.less
@@ -23,3 +23,11 @@
     opacity: 1;
   }
 }
+
+@media screen and ( max-width: 850px ) {
+  .figure {
+    &_button {
+      display: none;
+    }
+  }
+}
