--- a/less/slow-scroll-col.less
+++ b/less/slow-scroll-col.less
@@ -49,6 +49,7 @@
       float: none;
       margin: 1.5rem 0;
       max-width: 100%;
+      width: 100%;
     }
 
     &_figure {
